version 21-fixed profile photo on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,6 @@ footer {
 @media (max-width: 1170px) {
     /* Adjust styles for smaller screens, including tablets */
     .header-image img {
-        max-width: 70px; /* Decrease profile picture size */
-        margin-bottom: 10px; /* Add space below profile picture */
+        max-width: 50px; /* Decrease profile picture size */
     }
 }
